k8/dev/kafka-consumer.yaml
# Kafka Consumer Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-consumer
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
        - name: kafka-consumer
          image: issappacr.azurecr.io/si/system-intelligence-kafka:1.0.6
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "500m"

---
# Kafka Consumer Service
apiVersion: v1
kind: Service
metadata:
  name: kafka-consumer-service
spec:
  selector:
    app: kafka-consumer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
