k8/dev/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: si-app-dev
  labels:
    app: kafka
spec:
  ports:
  - protocol: TCP
    port: 9092
    name: kafka
    targetPort: 9092
  - protocol: TCP
    port: 9093
    name: controller
    targetPort: 9093
  type: ClusterIP
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: si-app-dev
spec:
  serviceName: "kafka"
  replicas: 2
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: bitnami/kafka:latest
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1"
        ports:
        - containerPort: 9092
        - containerPort: 9093
        volumeMounts:
        - name: kafka-storage
          mountPath: /var/lib/kafka
  volumeClaimTemplates:
  - metadata:
      name: kafka-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 4Gi
      storageClassName: managed-premium-rw
