k8/dev/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: systemintelligenceui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: systemintelligenceui
  template:
    metadata:
      labels:
        app: systemintelligenceui
    spec:
      containers:
        - name: systemintelligenceui
          image: issappacr.azurecr.io/si/system-intelligence-ui:0.2.9
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: systemintelligenceui
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: systemintelligenceui
