k8/dev/si-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: si-ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: '300m'
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /heartie-be-dev(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: systemintelligencebackendapp
            port:
              number: 80
      - path: /ui-dev(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: systemintelligenceui
            port:
              number: 80
